--- a/mod2assessment1/index.html
+++ b/mod2assessment1/index.html
@@ -83,7 +83,7 @@
                     <input type="number" id="oreos" name="oreos">    
                 </div>
             </div>
-            <button id="submit">Get Summary</button>
+            <button id="submit" type="button">Get Summary</button>
         </form>
 
         <div class="summary">
